@@ -593,6 +593,7 @@ wxMSW:
 
 - Fix blank wxBitmapComboBox dropdown appearance.
 - Make "%lu" work with size_t arguments under Win64 (laro).
+- Fix wxRegion::Offset() with shared objects (Joost Nieuwenhuijse).
 
 
 3.0.0: (released 2013-11-11)
